# FastMysticSquare

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: Build.yml
src/: AlgorithmIDA.hpp  CMakeLists.txt  DistanceManhattan.cpp  DistanceManhattan.hpp  Kpuzzle4.cpp  Kpuzzle4.hpp  PatternDB.hpp  SearchNode.cpp  SearchNode.hpp  State.cpp  State.hpp
tests/: CMakeLists.txt  testAlgorithmIDA.cpp  testDistanceManhattan.cpp  testPatternDB.cpp  testSearchNode.cpp  testState.cpp
